[package]
name = "resnet-on-wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
base64 = "0.22.1"
getrandom = { version = "0.2", features = ["js"] }
image = "0.25.5"
js-sys = "0.3.77"
tract-onnx = "0.21.11"
wasm-bindgen = { version = "0.2.100", features = ["serde", "serde-serialize"] }
wasm-bindgen-futures = "0.4.50"
wasm-bindgen-test = "0.3.50"
web-sys = { version = "0.3.77", features = [
    'console',
    'Window',
    'Document',
    'Request',
    'RequestInit',
    'Response',
] }
